--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -31,7 +31,7 @@
             <h3>Feedback</h3>
             <p>This concept is awesome! Also, the site looks nice and stylish <em>(Jeroen)</em></p>
             <p>Is there also a mobile app for this site? <em>(Patrick)</em></p>
-            <a href="#">Add feedback...</a>
+            <a href="{{ path('feedback') }}">Add feedback...</a>
         </article>
     </aside>
 {% endblock %}
