--- a/templates/courses.html.twig
+++ b/templates/courses.html.twig
@@ -4,17 +4,15 @@
     <section>
         <p>Below you can find an overview of all available courses.</p>
         <ul>
-            <li>Computernetworks
+            {% for course in courses %}
+            <li>{{ course.name }}
                 <ul>
-                    <li class="bookItem">Computer networking: a top down approach</li>
+                    {% for book in course.books %}
+                    <li class="bookItem">{{ book.title }}</li>
+                    {% endfor %}
                 </ul>
             </li>
-            <li>Operating Systems
-                <ul>
-                    <li class="bookItem" data-isbn="">Silberschatz's Operating System Concepts</li>
-                    <li class="bookItem" data-isbn="">Printout version of lecture slides</li>
-                </ul>
-            </li>
+            {% endfor %}
         </ul>
     </section>
 {% endblock %}
