rest of the templates implemented

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,6 +23,10 @@
     <nav>
         <ul>
             <li><a href="{{ path('home') }}">Home</a></li>
+            <li><a href="{{ path('courses') }}">Courses</a></li>
+            <li><a href="{{ path('reservation') }}">Reservation</a></li>
+            <li><a href="{{ path('about') }}">About</a></li>
+
         </ul>
     </nav>
 </header>
