--- a/templates/main.html.twig
+++ b/templates/main.html.twig
@@ -24,7 +24,9 @@
         </article>
         <article>
             <h3>Feedback</h3>
-
+            <ul>
+                <li><a href="{{ path('feedback') }}">Add feedback ...</a></li>
+            </ul>
         </article>
     </aside>
 {% endblock %}
