--- a/templates/feedback.html.twig
+++ b/templates/feedback.html.twig
@@ -3,13 +3,11 @@
 {% block content %}
     <section>
         <h3>add feedback...</h3>
-        <label for="author">Author:</label>
-        <input type="text" id="author" name="author" placeholder="Your name.." required>
-
-        <label for="feedback">Feedback:</label>
-        <textarea id="feedback" name="feedback" placeholder="Write something.." style="height:50px" required></textarea>
-
-        <button type="submit" value="Submit" id="submitBtn">Submit</button>
+        {{ form_start(form) }}
+        {{ form_row(form.author, {'label': 'Author:'}) }}
+        {{ form_row(form.text, {'label': 'Feedback:'}) }}
+        {{ form_row(form.save, {'label': 'Submit', 'attr': {'id': 'submitBtn'}}) }}
+        {{ form_end(form) }}
 
     </section>
 {% endblock %}
